[package]
name = "pest_railroad"
version = "0.1.0"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Railroad (aka syntax) SVG diagram generator for Pest parsers. It supports most (but not all) Pest grammar rules."
repository = "https://github.com/nu11ptr/pest_railroad/tree/main/railroad"
documentation = "https://docs.rs/pest_railroad"
keywords = ["syntax", "diagram", "parser", "peg", "pest"]
categories = ["parsing"]
readme = "../README.md"
edition = "2021"

[dependencies]
pest = "2.7.15"
pest_derive = "2.7.15"
railroad = "0.3"
